--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
+            <action android:name="android.intent.action.SCREEN_ON"/>
+            <action android:name="android.intent.action.SCREEN_OFF"/>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
